# ISL

./: .gitignore  README.md  about.html  index.html  model_best.py  pyproject.toml  reference.html
ISL-main/: README.md  best_isl_landmark_model.pth  collect_data.py  model1_ultralight.py  model2_highperf.py  model_best.py
ISL-main/.gradio/flagged/: dataset1.csv  dataset2.csv
css/: style.css
js/: script.js
landmark_data/: labels.npy
